--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,3 +1,9 @@
+@media (max-width: 1020px) {
+  .contenedor {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
 @media (max-width: 768px) {
     .contenedorDoble {
       flex-direction: column;
@@ -6,4 +12,7 @@
     .boxDoble {
       flex-basis: 100%;
     }
+    
   }
+
+  
