--- a/styles/index.css
+++ b/styles/index.css
@@ -72,7 +72,22 @@ body {
 /*===============================================*/
 
 /* --- NAVEGADOR --- */
+.top_menu{
+  height: 44px;
+  letter-spacing: 0;
+  text-align: center;
+  display: flex;
+  justify-content: right;
+}
 
+.top_menu li {
+  margin: 0 10px;
+}
+
+.top_menu a {
+  text-decoration: none;
+  color: #000;
+}
 /* --- LOGO HEADER --- */
 
 /*===============================================*/
@@ -222,6 +237,42 @@ body {
   display: flex;
   justify-content: left;
   gap: 10px;
+}
+/* --- FORMULARIO --- */
+#consultaEnsam input {
+  width: 80%;
+  height: 27px;
+  border-radius: 10px;
+  padding: 5px 10px;
+  border: 1.5px solid var(--azulclaro);
+  font-family: var(--font-family-montserrat);
+}
+#consultaEnsam textarea {
+  width: 80%;
+  border-radius: 10px;
+  padding: 5px 10px;
+  border: 1.5px solid var(--azulclaro);
+  font-family: var(--font-family-montserrat);
+}
+input::placeholder {
+  color: var(--celeste);
+}
+textarea::placeholder {
+  color: var(--celeste);
+}
+#consultaEnsam select{
+  width: 84%;
+  padding: 10px 15px;
+  border-radius: 10px;
+  border: 1.5px solid var(--azulclaro);
+  font-family: var(--font-family-montserrat);
+}
+#consultaEnsam label {
+  font-size: medium;
+}
+#consultaEnsam button {
+  margin: 0 auto;
+  display: block;
 }
 
 /*===============================================*/
