--- a/styles/index.css
+++ b/styles/index.css
@@ -21,17 +21,47 @@
  
   --font-family-andalusia_script-regular: "Andalusia Script-Regular", Helvetica;
   --font-family-montserrat: "Montserrat", Helvetica;
+  --font-family-rouge_script-regular: "Rouge Script", Helvetica;
+}
+body {
+  margin: 0 0;
 }
 
 /* --- TITULOS Y TEXTOS --- */
+.textoGeneralBlanco{
+  color: var(--blanco);
+}
 
 /* --- CONTEDENOR Y FONDOS --- */
+.contenedor {
+  max-width: 1000px;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  height: auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
+
+
+  
+}
 .contenedorDoble {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+}
+.gridContenedorSimple{
+  align-items: center;
+}
+.bgAzul {
+  background-color: var(--azuloscuro);
+  color: var(--blanco);
+}
+.bgBlanco {
+  background-color: var(--blanco);
+  color: var(--black);
 }
 /* --- LINK --- */
 .linkTexto{
@@ -45,131 +75,206 @@
 /*===============================================*/
 /*    HEADER                                     */
 /*===============================================*/
-.bgAzul{
-  background-color: VAR(--azuloscuro);
-}
-.contenedor{
 
-}
 /* --- NAVEGADOR --- */
-.contenedor navegador1{
 
-}
-.top_menu{
-
-}
 /* --- LOGO HEADER --- */
 
 /*===============================================*/
 /*    PORTADA                                    */
 /*===============================================*/
-.bgAzulbg Banner{
+.bgAzul bgBanner{
+  display: grid;
+  position: relative;
+  width: 100%;   
+  height: auto;
 
 }
-.pieDeBanner gridContainerPorcentual{
+.bgAzulbgBanner img{
+  display: grid;
+  width: 100%;
+  height: auto;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+}
+
+.pieDeBannergridContainerPorcentual{
+
+}
+
+.alignTextTop{
+
+position: absolute;
+width: 100%;
+height: auto;
+left: 220px;
+top: 372px;
+font-family: var(--font-family-montserrat);
+font-style: normal;
+font-weight: 700;
+font-size: var(--font-size-xxl);
+line-height: 44px;
+display: flex;
+align-items: flex-end;
+color: var(--blanco);
+
+
+ 
+
+
+}
+.ScriptalignTextBottom{
+  
+  
+position: absolute;
+width: 800px;
+height: 100px;
+left: 220px;
+top: 500px;
+font-family: VAR(--font-family-rouge_script-regular);
+font-size: var(--font-size-xxl);
+font-style: 400;
+font-weight: 400;
+line-height: 45px;
+display: flex;
+align-items: flex-end;
+color: var(--blanco);
+  
+  
+  
+}
+.elementoPortada2{
+  position: absolute;
+  width: 200px;
+  height: 262px;
+  left: 1120px;
+  top: 380px;
+
+  
 
 }
 /* --- IMAGEN FONDO --- */
 
 /* --- PIE E IMAGEN LOGO PORTADA --- */
-.elementoPortada1{
 
-}
-.alignTextTop{
-
-}
-.andaluciaScript alignTextBottom{
-
-}
-.elementoPortada2{
-
-}
 /*===============================================*/
 /*    NOSOTROS                                   */
 /*===============================================*/
+
+.bgBlanco{
+  background-color: var(--blanco);
+  color: var(--black);
+
+}
+.contenedor{
+  max-width: 1000px;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
+
+}
 .textoAzulClaro{
-  color: VAR(--azulclaro);
-  font-family: var(--font-family-montserrat);
-  font-size: var(--font-size-xxxl);
+color: VAR(--azulclaro);
+font-family: VAR(--font-family-montserrat);
+text-align: center;
  
+
 }
 .gridContenedorSimple{
-  color: VAR(--negro);  
-  font-family: var(--font-family-andalusia_script-regular);
-  font-weight: bold;
-  display: grid;
-  
-  
+  align-items: center;
 }
 .textoGeneralNegro{
-  color: VAR(--negro);  
-  font-family: var(--font-family-andalusia_script-regular);
-  font-weight: bold;
+  color: VAR(--negro);
+  font-family: VAR(--font-family-montserrat);
 }
-
-.celesteClaro textTitulares{
- 
-  
-  
-  
+.celesteClarotextTitulares{
+  color: VAR(--azuloscuro);
+  font-family: VAR(--font-family-montserrat);
 }
 .textoNombresCargostextDosColumnas{
-  display: grid;
-
-  
-
-}
-
-
-.span cargos{
-  
+  color: VAR(--negro);
+  font-family: VAR(--font-family-montserrat);
+  -webkit-column-count: 2;
+  -moz-column-count: 2; 
+  column-count: 2;
+ 
 
 }
-
-
-
 .linkTexto{
-  color: VAR(--celeste);
-  font-family: var(--font-family-andalusia_script-regular);
+    color: VAR(--celeste);
+  }
+  .linkTexto:hover{
+    color: var(--azulclaro);
+    cursor: pointer;
+  }
+
+
+.spancargos{
+  color: var(--azulclaro);
+  font-family: VAR(--font-family-montserrat);
   font-weight: bold;
 }
+
 
 /*===============================================*/
 /*    ACCIONES                                   */
 /*===============================================*/
-.bgAzul{
-  background-color: VAR(--azuloscuro);
-
-}
-.contenedor{
- 
-
-}
-.textoCelesteClarito, .textoCelesteClaro{
-  color: VAR(--celesteclaro);
-  font-family: var(--font-family-montserrat);
-  font-size: var(--font-size-xxxl);
-
-}
-textDosColumnas textoGeneralBlanco{
- 
-}
-
 .boxDoble {
+
   flex-basis: calc(50% - 10px);
   margin-bottom: 20px;
+
+
+  color: var(--azuloscuro);
+  font-family: var(--font-family-montserrat);
 }
+.bgAzul{
+  background-color: var(--azuloscuro);
+  color: var(--blanco);
+}
+.contenedor{
+  max-width: 1000px;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
+
+}
+.gridContenedorSimple{
+  align-items: center;
+
+}
+.textDosColumnastextoGeneralBlanco{
+  color: VAR(--blanco);
+  font-family: VAR(--font-family-montserrat);
+  
+
+  
+  
+}
+.textoCelesteClaro{
+  color: VAR(--celesteclaro);
+  font-family: VAR(--font-family-montserrat);
+}
+.textoCelesteClarito{
+  color: VAR(--celesteclaro);
+  font-family: VAR(--font-family-montserrat);
+  text-align: center;
+}
+.textoAzulClaro{
+  color: VAR(--azulclaro);
+  font-family: VAR(--font-family-montserrat);
+
+
+
+}
+
 /*===============================================*/
 /*    SOCIOS/AS                                  */
 /*===============================================*/
-.bgBlanco{
-  background-color: VAR(--blanco);
-
-}
-.contenedor{
-
-}
-
 /* --- BOTONES --- */
 .botonPrimario {
   background-color: var(--azulclaro);
@@ -264,6 +369,15 @@ textDosColumnas textoGeneralBlanco{
 .boxDoble img{
 
 }
+.textoGeneralBlanco{
+  color: VAR(--blanco);
+  font-family: VAR(--font-family-montserrat);
+}
+. 
+. 
+. 
+. 
+
 /*===============================================*/
 /*    CONTACTO                                   */
 /*===============================================*/
@@ -296,8 +410,43 @@ textDosColumnas textoGeneralBlanco{
   justify-content: left;
   gap: 10px;
 }
+#consultaEnsam input {
+  width: 80%;
+  height: 27px;
+  border-radius: 10px;
+  padding: 5px 10px;
+  border: 1.5px solid var(--azulclaro);
+  font-family: var(--font-family-montserrat);
+}
+#consultaEnsam textarea {
+  width: 80%;
+  border-radius: 10px;
+  padding: 5px 10px;
+  border: 1.5px solid var(--azulclaro);
+  font-family: var(--font-family-montserrat);
+}
+input::placeholder {
+  color: var(--celeste);
+}
+textarea::placeholder {
+  color: var(--celeste);
+}
+#consultaEnsam select{
+  width: 84%;
+  padding: 10px 15px;
+  border-radius: 10px;
+  border: 1.5px solid var(--azulclaro);
+  font-family: var(--font-family-montserrat);
+}
+#consultaEnsam label {
+  font-size: medium;
+}
 
 /*===============================================*/
 /*    FOOTER                                     */
 /*===============================================*/
 
+.linksFootertextoCelesteClarito{
+  color: var(--celesteclaro);
+  font-family: var(--font-family-montserrat);
+}
