--- a/styles/index.css
+++ b/styles/index.css
@@ -30,6 +30,7 @@ body {
 /* --- TITULOS Y TEXTOS --- */
 .textoGeneralBlanco{
   color: var(--blanco);
+  font-family: var(--font-family-montserrat);
 }
 
 /* --- CONTEDENOR Y FONDOS --- */
@@ -102,6 +103,44 @@ body {
 /*===============================================*/
 /*    NOSOTROS                                   */
 /*===============================================*/
+.textoAzulClaro {
+  color: var(--azulclaro);
+  font-family: var(--font-family-montserrat);
+  font-size: var(--font-size-xxl);
+  text-align: center;
+
+}
+.textoGeneralNegro{
+  color: var(--negro);
+  font-family: var(--font-family-montserrat);
+  font-size: var(--font-size-l);
+}
+.spancargos{
+  color: var(--azulclaro);
+  font-weight: bold;
+}
+
+h4.celesteClaro {
+  color: var(--azulclaro);
+  
+  
+}
+h4.textTitulares{
+  font-family: var(--font-family-montserrat);
+  font-size: var(--font-size-l);
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+section.textoNombresCargos {
+  font-family: var(--font-family-montserrat);
+  font-size: var(--font-size-l);
+  
+}
+section.textDosColumnas{
+  -webkit-column-count: 2; 
+  -moz-column-count: 2; 
+  column-count: 2;
+}
 
 /*===============================================*/
 /*    ACCIONES                                   */
@@ -109,7 +148,26 @@ body {
 .boxDoble {
   flex-basis: calc(50% - 10px);
   margin-bottom: 20px;
+  font-family: var(--font-family-montserrat);
 }
+.textoCelesteClarito{
+  color:var(--celesteclaro);
+  font-family: var(--font-family-montserrat);
+  font-size: var(--font-size-xxl);
+  text-align: center;
+}
+.textoCelesteClaro{
+  color:var(--celesteclaro);
+  font-family: var(--font-family-montserrat);
+  font-size: var(--font-size-xl);
+  
+}
+
+/*===============================================*/
+/*   VER QUE EN ACCIONES NO QUEDA BIEN DIVIDIDO POR 2 COLUMNAS   */
+
+
+
 /*===============================================*/
 /*    SOCIOS/AS                                  */
 /*===============================================*/
@@ -125,6 +183,7 @@ body {
   font-size: var(--font-size-m);
   font-weight:600;
   transition: all 0.2s ease;
+  
 }
 .botonPrimario:hover,
 .botonPrimario:focus {
@@ -202,6 +261,7 @@ body {
 /*    CAMPAÑAS                                   */
 /*===============================================*/
 .boxDoble {
+  
 
 }
 .boxDoble img{
@@ -279,4 +339,7 @@ textarea::placeholder {
 /*===============================================*/
 /*    FOOTER                                     */
 /*===============================================*/
-
+a.linksFooter {
+font-family: var(--font-family-montserrat);
+font-size: var(--font-size-l);
+}
