--- a/styles/index.css
+++ b/styles/index.css
@@ -126,10 +126,7 @@ body {
 /* --- LOGO HEADER --- */
 
 /*===============================================*/
-/*    PORTADA                                    */
-
-/*===============================================*/
-.pieDeBanner {
+/*    PORTADA    .pieDeBanner {
   display: grid;
   grid-template-columns: 70% 30%;
   grid-template-rows: auto;
@@ -160,6 +157,73 @@ body {
   max-width: 100%;
   height: auto;
 }
+                                */
+/* Estilos generales */
+.contenedor {
+  width: 100%;
+  max-width: 1200px; /* Ajustar? */
+  margin: 0 auto;
+  padding: 20px;
+}
+
+/* Estilos del banner */
+#portada {
+  position: relative;
+  background-size: cover;
+  background-position: center;
+  background-image: url(../img/rectangle-2.png);
+  
+}
+
+.pieDeBanner {
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+  height: 100%;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.elementoPortada1 {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-end;
+  font-family: var(--font-family-montserrat);
+}
+
+.elementoPortada1 h1 {
+  margin: 0;
+  font-size: var(--font-size-xxl);
+  font-weight: bold;
+}
+
+.elementoPortada1 p {
+  margin: 10px 0 0;
+  font-family: var(--font-family-cookie);
+  font-size: var(--font-size-xl);
+}
+
+
+.elementoPortada2 {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  
+}
+
+.elementoPortada2 img {
+  max-width: 50%;
+  height: auto;
+  margin-top: 300px;
+  
+}
+
+
+
+
+/*===============================================*/
 
 
 
@@ -253,6 +317,7 @@ section.textDosColumnas{
   font-size: var(--font-size-m);
   font-weight:600;
   transition: all 0.2s ease;
+ 
   
 }
 .botonPrimario:hover,
@@ -328,14 +393,15 @@ section.textDosColumnas{
 }
 
 /*===============================================*/
-/*    CAMPAÑAS            
-.boxDoble {
-  
+/*    CAMPAÑAS      */      
 
+.boxDoble img {
+  max-width: 100%;
+  height: auto;
+  object-fit: cover;
+  border-radius: 10px; 
+  border: 1px solid #000;
 }
-.boxDoble img{
-
-}                       */
 /*===============================================*/
 
 /*===============================================*/
