--- a/styles/index.css
+++ b/styles/index.css
@@ -99,6 +99,9 @@ body {
   height: 44px;
   width: 120px;
   line-height: 44px;
+  background-image: url(./img/line-1.svg);
+  background-repeat: no-repeat;
+  background-position-x: left;
 }
 .top_menu li:hover{
   color: var(--celeste);
@@ -115,6 +118,20 @@ body {
   list-style: none;
 }
 
+/* --- IMAGENES NAVEGADOR --- */
+
+.header-flex {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#logo img {
+  height: 50px;
+  margin-right: 10px;
+}
+
+
 /* --- MENU HAMBURGUESA --- */
 .navegador1 :open{
   background-color: rgba(0, 0, 0, 0.8);
@@ -124,6 +141,9 @@ body {
   width: 100%;
   height: 100%;
   z-index: 1;
+}
+.navegador1{
+  padding-top: 0;
 }
 #hamburguer-btn {
   background-image: url(../img/hamburger-icon.png);
