--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,4 +1,42 @@
-@media (max-width: 768px) {
+/*===============================================*/
+/*     Mobile, Tablet                            */
+/*===============================================*/
+@media (max-width:1200px){
+  #portada {
+    min-height: 50vh; 
+  }
+}
+@media (max-width: 1024px) {
+  #navegador {
+    display: none;
+  }  
+}
+@media (max-width:1100px){
+	.contenedor {
+		max-width: 900px;
+	}
+}
+@media (max-width:850px){
+	.contenedor {
+		padding-left: 20px;
+    padding-right: 20px;
+	}
+  .header-flex {
+    padding: 5px;
+  }
+}
+
+@media (min-width: 1025px) {
+  #hamburguer-btn {
+    display:none;
+  }
+}
+
+
+
+
+
+/*@media (max-width: 768px) {
     .contenedorDoble {
       flex-direction: column;
     }
